apps/common/node-red/netpol/allow-ext-egress-geoplugin-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ext-egress-geolocator"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
  - toFQDNs:
    - matchPattern: "www.geoplugin.net"
    - matchPattern: "ip-api.com"
