apps/common/node-red/netpol/allow-ext-egress-zen-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-external-egress-zen"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
  - toFQDNs:
    - matchPattern: "wifi.zenhq.com"
