apps/common/node-red/netpol/allow-local-egress-influxdb-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-local-egress-influxdb"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": influxdb
        "app.kubernetes.io/name": influxdb
